--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-description: "Welcome to Browser Use - AI-powered browser automation"
+description: "Welcome to Browser Use - We enable AI to control your browser"
 icon: "book-open"
 ---
 
@@ -28,7 +28,7 @@ Browser Use is the easiest way to connect your AI agents with the browser. It ma
     Extend functionality with custom actions
   </Card>
   <Card
-    title="LangChain Models"
+    title="Supported Models"
     icon="robot"
     href="/customize/langchain-models"
   >
