--- a/docs/customize/langchain-models.mdx
+++ b/docs/customize/langchain-models.mdx
@@ -185,8 +185,8 @@ agent = Agent(
 Required environment variables: None!
 
 ## Coming soon
-(Sorry, we are working on it)
+(We are working on it)
 - Groq
 - Github
 - DeepSeek R1
-- fine-tuned models
+- Fine-tuned models
