Allow custome output

--- a/docs/customize/langchain-models.mdx
+++ b/docs/customize/langchain-models.mdx
@@ -163,7 +163,7 @@ DEEPSEEK_API_KEY=
 Many users asked for local models. Here they are. 
 
 1. Download Ollama from [here](https://ollama.ai/download)
-2. Run `ollama pull model_name`. You can pick a model which supports tool-calling from [here](https://ollama.com/search?c=tools)
+2. Run `ollama pull model_name`. Pick a model which supports tool-calling from [here](https://ollama.com/search?c=tools)
 3. Run `ollama start`
 
 ```python
