--- a/docs/customize/system-prompt.mdx
+++ b/docs/customize/system-prompt.mdx
@@ -55,7 +55,7 @@ Apply your custom system prompt when creating an agent:
 from langchain_openai import ChatOpenAI
 
 # Initialize the model
-model = ChatOpenAI(model='gpt-4')
+model = ChatOpenAI(model='gpt-4o')
 
 # Create agent with custom system prompt
 agent = Agent(
