--- a/docs/customize/agent-settings.mdx
+++ b/docs/customize/agent-settings.mdx
@@ -16,7 +16,7 @@ from langchain_openai import ChatOpenAI
 
 agent = Agent(
     task="Search for latest news about AI",
-    llm=ChatOpenAI(model="gpt-4"),
+    llm=ChatOpenAI(model="gpt-4o"),
 )
 ```
 
@@ -33,7 +33,7 @@ Control how the agent operates:
 agent = Agent(
     task="your task",
     llm=llm,
-    controller=custom_controller,  # Custom function registry
+    controller=custom_controller,  # For custom tool calling
     use_vision=True,              # Enable vision capabilities
     save_conversation_path="logs/conversation.json"  # Save chat logs
 )
