add output format

--- a/docs/customize/agent-settings.mdx
+++ b/docs/customize/agent-settings.mdx
@@ -131,7 +131,7 @@ The agent is executed using the async `run()` method:
 - `max_steps` (default: `100`)  
   Maximum number of steps the agent can take during execution. This prevents infinite loops and helps control execution time.
 
-### Agent History
+## Agent History
 
 The method returns an `AgentHistoryList` object containing the complete execution history. This history is invaluable for debugging, analysis, and creating reproducible scripts.
 
@@ -161,3 +161,8 @@ The `AgentHistoryList` provides many helper methods to analyze the execution:
   capabilities, refer to the [AgentHistoryList source
   code](https://github.com/browser-use/browser-use/blob/main/browser_use/agent/views.py#L111).
 </Note>
+
+
+## Rerunning the Agent without LLM
+
+## Initial Actions without LLM
