--- a/docs/customize/custom-functions.mdx
+++ b/docs/customize/custom-functions.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Custom Functions"
 description: "Extend default agent and write custom function calls"
-icon: "code"
+icon: "function"
 ---
 
 ## Basic Function Registration
