--- a/docs/customize/real-browser.mdx
+++ b/docs/customize/real-browser.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Connect to a Real Browser"
+title: "Connect to your Browser"
 description: "With this you can connect to your real browser, where you are logged in with all your accounts."
-icon: "message"
+icon: "computer"
 ---
 
 ## Overview
