fix: install command
Signed-off-by: Paul Lockett <Plockett.pl@gmail.com>

--- a/docs/development/local-setup.mdx
+++ b/docs/development/local-setup.mdx
@@ -29,7 +29,7 @@ uv venv --python 3.11
 
 ```bash
 # Install all dependencies including dev packages
-uv pip install . ."[dev]"
+uv pip install -r pyproject.toml --all-extras
 ```
 
 ## Configuration
