fix: ensure save_conversation_path ends with a slash and add tests for conversation logging

--- a/docs/customize/agent-settings.mdx
+++ b/docs/customize/agent-settings.mdx
@@ -35,7 +35,7 @@ agent = Agent(
     llm=llm,
     controller=custom_controller,  # For custom tool calling
     use_vision=True,              # Enable vision capabilities
-    save_conversation_path="logs/conversation.json"  # Save chat logs
+    save_conversation_path="logs/conversation"  # Save chat logs
 )
 ```
 
