--- a/docs/customize/supported-models.mdx
+++ b/docs/customize/supported-models.mdx
@@ -117,7 +117,7 @@ from pydantic import SecretStr
 import os
 
 # Initialize the model
-llm = ChatGoogleGenerativeAI(model='gemini-2.0-flash-exp', api_key=SecretStr(api_key))
+llm = ChatGoogleGenerativeAI(model='gemini-2.0-flash-exp', api_key=SecretStr(os.getenv('GEMINI_API_KEY')))
 
 # Create agent with the model
 agent = Agent(
