Added hatch installation link

--- a/docs/development/local-setup.mdx
+++ b/docs/development/local-setup.mdx
@@ -32,6 +32,10 @@ uv venv --python 3.11
 uv pip install -e ".[dev]"
 ```
 
+3. Install hatch:
+
+Follow their [installation page](https://hatch.pypa.io/latest/install/#command-line-installer)
+
 <Note>
   The `-e` flag installs the package in "editable" mode, which means your local code changes
   will be reflected immediately without requiring reinstallation. The `[dev]` part installs
