--- a/docs/customize/browser-settings.mdx
+++ b/docs/customize/browser-settings.mdx
@@ -72,7 +72,7 @@ config = BrowserConfig(
 ```
 
 - **wss_url** (default: `None`)
-  WebSocket URL for connecting to external browser providers (e.g., [anchorbrowser.io](https://anchorbrowser.io), [steel.dev](https://steel.dev), [browserbase.com](https://browserbase.com), [browserless.io](https://browserless.io)).
+  WebSocket URL for connecting to external browser providers (e.g., [anchorbrowser.io](https://anchorbrowser.io), steel.dev, browserbase.com, browserless.io).
 
 <Note>
   This overrides local browser settings and uses the provider's configuration.
